--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:1M7RcN1+xQjdi01rvpH7nokmd+IUD/Rs87EMlzu6g0TgBgcFSOpzh+eGgoQuJDh+ZU5Y5/EZvenFJds9J0MwG20=,iv:VwfO4B0vlYEb+KBH1ZdYdBRc6rnqGcTktzFlybES3Z4=,tag:enrCLUXN904h0bw5wVEhaw==,type:comment]
-#ENC[AES256_GCM,data:EBxhH211LZwCD/leDjIHAH47vQ69aDpv/DxNC+rYpkpOgBb7Y/n3UvrfGaQ=,iv:GisX3qcUAr+GujAsjstVI+QQ7ImMD85xqpsehDP/TIg=,tag:XvZQzvvYcsPf9rKHC9qHxw==,type:comment]
-VIP: ENC[AES256_GCM,data:7Mnb3dOoePg1O7R51w==,iv:WyBpYb0QbIlM7M+bLwmH9yakj8JOodsUDhCz+4Rbgyg=,tag:F3PhXmYXFKG9nVIoaVi7eg==,type:str]
-#ENC[AES256_GCM,data:VqSCr99p4XFF0WUyM3XwyyC99hJmj38zW3Kf,iv:twHLu+61Ca3kvNmzl9/FhIvBC6KA8ES2ma8d3NHO118=,tag:ihgEZ5RSa+NxQNtHVLDLWw==,type:comment]
-#ENC[AES256_GCM,data:G+dejuDJmIQNL06H+csCkd4WJpyDpzdgkmw5A8xFoEVlj0W681gK/+DgR+y6tQ706rlhFYQzkc88PxsG5T1NGDyELiHePXQWbpVVeYc206tJfSZ94+NnA4k=,iv:pRX+3owUTTZLL9EoXIWvL0e/JT9fvsosWGk0ooUVTqs=,tag:91nJCZqebB5FVcmvFKpEXQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:v+yVEVB2JXhE3R1+Xs0=,iv:MueWPV4jMKhc5HMIw54xDG6TsbJ96RHoSbqmfwzgVFc=,tag:RbNKxtXWfcY9WdttaO/HQw==,type:str]
-#ENC[AES256_GCM,data:7jroJa60EunhWux9QzOmzn5q+iN0YFEi2aeE+RDCxxnsUA==,iv:Up4pQ0LVYKEX5WRHydOE87Ee/wxmiGqPxUCotIK/Utk=,tag:xJ5rZv8ajBrgVMomgvZUyw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:tg8uhzeCNbpyebKXiQ==,iv:Tq7Oq+uSlv1/avKelj1tl9ppZOaEt0lvNevdy86DQ/4=,tag:5heDuO1T6J/isbG6yn7fKg==,type:str]
-#ENC[AES256_GCM,data:A6tR+brgzd8JRD3jOkvPu2u/mrNS3VtW5qE11pSFDbLc8uIYRWKc8lArKuIfNyM=,iv:y0p52kJDAA7e9f2nMmduE657bz4vnbtnoCLfHKQy9tU=,tag:TfPDMAVLvJ7MerzMvvZEKw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:TM4egvvNMwJH7iX4/RquMRa3TRqmrou4tCbsqSWkJg==,iv:S54a/nrG+lWadhApiZQc6ShK7J7jLrAI4VdpnDwgfp8=,tag:65D3T83M9Cb0SW7vr6AxCA==,type:str]
-#ENC[AES256_GCM,data:CEbcnGvK8rnYI2QLsIfieR7KBxB1VKBVhjv4zMInPY3JPr52Mob69+4Pyua6taHxcep2QsJ3U8wnxTMRfeFNAhNLqLEalkLcmzFI2WO6EC0wtQ==,iv:jJ35M5MmdOeqBKlaiFnSF29hx3zZeezHOFtkZCQ7f00=,tag:P6E+O00A7bkwcAR2LLEBzw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:IznZ1aZl84dJYGVpQFzd,iv:ufIgHDTRLxzo6CTK8COEr295E6xRlmgZkm7dgwFOYGY=,tag:5/yS3IMeYPQIcNpNer5/Jw==,type:str]
-#ENC[AES256_GCM,data:qjq9+dmhZWHWZekb6naJIvVEoVTxpW0/RkJyme+gXuZ8,iv:vgI1s036T+6dJ9F9DikBj80EH8rYF6+Tc4P10DjINRs=,tag:LuHrj6GpFZa2wzyOsGPg2Q==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:K/T3Q1xS5NGHcMTOYqYW,iv:6icGz89b6LDlMDV/aDMLlzzaMIJqygFLchJp0MD2VJ4=,tag:Nm4GyB5CggTAoZ4GE7U6rQ==,type:str]
-#ENC[AES256_GCM,data:ytbgDlxQY0sI6nduMZDzqRqr2VRkwAcolrXCOq70BUZ2H6CJGy0jpTHO7LzPIn/BerB5Z7EUCbqdXth1iJw+rHdm4k8fC/+hsujGKlBtH7U=,iv:pGQGkJNR0UZG7JLE4qNyjEB5vcxxLyEIEP8YsWkm5XE=,tag:iPtAXrQmCIqrn7Dety3MGw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:2l8YL+ek6+xWrqKWYlG4,iv:eW2xzxZ1YI3oNLb39i7Fwr7ZllOkegv48dRNPuN26dY=,tag:N8qmImJkStGewcD/1vxtkA==,type:str]
-#ENC[AES256_GCM,data:3UCcoBkKTrfTay2+v6zkPqzJWEA69/EUOoSayL7q4O0R6lWQ7QJXX7Vklv9ky72Hb0hC/tR367ndweu8IndplzvnMvipQFqA2mP2Fb2UtUk7TP97SUa3,iv:/B/zl1rRu9A7+11V6DHVZgeMcc7g2y8fX2x7v8qSJK4=,tag:DB38A5mdjZTMK4mhsmXHFQ==,type:comment]
-#ENC[AES256_GCM,data:oDj9ca6JB24ZYt5MRB3vtX3fMzjYZonO0FD2zrdcnBGaBKa9LPqlF7ouCudh+3riLMPND+fAruErxFrb7kZgSKmRPGMgLjwyZ7Gn+Fb/7lDQ8RNIX6X8vZLH9IFSZ6CI0qZ6Bkg3tbpZNuO241WnV4mBL5BRr31yBPKe2g==,iv:a0Titsv4sp+6bKg5Bga6i3NjFPlRTvL21CJqDWn+iDU=,tag:ftVO6pGs0uXYsDYiLx360w==,type:comment]
-#ENC[AES256_GCM,data:1ifLzQVBnWo8yQ183Lv3sCUxZ5ZOlSpXRW9toZDSoFQ9EH5ttJv3opgtQzuNMgun9nMCsBXizixvH2wybD6PiuKx/bGsgPNQp/FDjZEfrHM=,iv:TgeyrXGtrDlu5YOAlOC9iyv3CyhEZyXNh8YdlS5imTE=,tag:glrDskVCXcLgR229eeqcrA==,type:comment]
-#ENC[AES256_GCM,data:0tJ9fDVf1HhA6QQ4uVB3pPlvwz6v0kWLIGoTwWsH2iTc1zAZtyye2pF5MRZxmM8MJLPkD8K3,iv:mbMz/QdIAH8JxnaoLC7GdBWUSwvIj3TTeoXN1UJn2kI=,tag:Bc6Ujxi8ALRZwWNdkN+/Hg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:HwPOzV5imvnNnwDn,iv:SQgAnpk6RFXCTSjRCsYsIG6MD2p25Iz3WRQz+UAgy4I=,tag:Dnw1IuHZf8eUXABxWpnQQw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:zyUUznm+B9NSWY66UHvKYOM=,iv:x7VAPvS/Sv7S5Yo+Gw8AdbXzYyfSQ5q0Sqorb31Rdus=,tag:+ciiF679Hdc1wYlPE0hjpg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:zZZl4Obw714W1Ey3Xv9PR46WjTU81J4AA5IEqVCHPsE=,iv:vL+wb2xpY33YdAhFNUUkYj0Eulb5oKL+hFra8cMjscw=,tag:hgy+Ybwd6eXjuyvo0/2DKQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:MtEgrJ0a0wtC/9pRBDT9RkAgjjKau2NCWKaEDioZvQjEgu2UpuSLgQ==,iv:KIY5RWIhDsbf/ql7xGs75EtTfFkTR4GR7al9mxqUqI0=,tag:IHCOKuzuGeEsl3XCTmN8RQ==,type:str]
-#ENC[AES256_GCM,data:HYh5OIAnkbDEI3F9wJMNDHR9S7hdrzJdggskD0XRStP0gQdbrN4BpramKeqNyR0F7U8izJFlNS8YwC8l8HxdLQ==,iv:dg1qs0brBeGQlcFk7vWFo94uU8AB/LPM8t4TMKmmEL8=,tag:yWLc/48FX7jYrYhW6m05FA==,type:comment]
-#ENC[AES256_GCM,data:OfFqkTKuu5dgMYtoLzCX/6qYqPCJJ52o82TVKOGUiEZ8nZAnsXOhFRUXPJPgFHS8IO++CHjY3Xk=,iv:OvTs+8eQ0MGBLtliaBPQK8RGql/LBZQRYMhx6iC8wSs=,tag:X7FnzEfNVxlodByzUFJoOg==,type:comment]
-#ENC[AES256_GCM,data:vyFvQPEeO8yNPFkdbD2fMBWlrxZgGMzJ7g==,iv:nLjApAHW4WBVok8u4fY97A/1i2zRFjEa5OT/y6jOROY=,tag:ZG4d+tpEfMfpXsERjaTStQ==,type:comment]
-#ENC[AES256_GCM,data:fHFYLe7phU5s4iw7iob7+SEAOcSBxzCq1Syvyr+bGoEUoITQG9Rvu6xM/6rru6kniCLEt1PO7E5fQQIY+C+0CLYrgnJvehna63Zj0c4=,iv:sbFN6zUfxln3ZtpYQDazUDHBeIk2Q6Uy//HxJxL6xF8=,tag:92doe/ynUkklLRnMlJI1sw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:mshMWxD42KNl/iw3iEIm/6FM94CqKwNziTec+6YLPmFXU6WRe1yN9Fwd9iDCCUac,iv:a99UBxHDedBmL/OureiV2ae7M+HULm5qacxT9dGUhzU=,tag:ZFYfYvRMIUXxPsM61ITjqw==,type:str]
-#ENC[AES256_GCM,data:o9l/ktcAVsJqL4Fcos+uvqklwDkm8NcGH7J8kGtDBbpzj55eEsLYnJp4UyxyT8tV+74CSRTQv7re51+pIytoMm+dW022AXU=,iv:eBNOMOFsJ1GDmFoiJEwqqWhw4K4FaXjdfGU3XUMa44U=,tag:v8y9D9rPIvohZ9FqOfwtww==,type:comment]
-#ENC[AES256_GCM,data:edY6LqvEJ6sFR9ozAwiJXkCGyp3QT1T5Qkc/gKSoMMguV2l8Jnl0xMo3/1zglpYxOHJT7zNw,iv:ZvJxbBXxHdHAykp4SHoSBp4XRJGd/F0FTlxqyfTpZOc=,tag:gO06qsrgrArSrR5YgkFhJg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:FRqsyys0LA==,iv:GgYBIPZLjgej+AfexxGz+DfJ0WdgIb9jXHzygbXymlA=,tag:atiG2tRa5XeEsC3tEUiiSA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8NZdeJ5nv4AX3Tiqy6o1hsymVOU=,iv:XkjLyWd3m7/728+mbnHMUiMO9s8zjcVFrjf6bWcYs8w=,tag:QI5zTcx0uKJvgE36UW2lqQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:Haui8kkyfQ403Ig=,iv:zPXAavQKotanwmhYbp/Z3Y4hDz1GCHSsk5YF5jAtPAA=,tag:XkhzN0zL2iPkYxkNvkpTcw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:Yymm1pkjjcywqfchXxaP,iv:UwbLAksun0oFWA9+zVagu+4XMvqybgqW03xLvdlGh/0=,tag:aT4tnR5EF/ApGVY3y3TUFA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:jqnhEE5TvNxCqvSYyGK4Cl4AHFKfIi8a9Q==,iv:rAk3ghyKjJC0YiB3SypZ6/y6q+ih1tDdMY1J4hzlKhc=,tag:ifu3L0Aasa3Ky9CZ+WXGMQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JCyI0m/3Izo4Uj7bYN8rk5IHcKgPTlT+Uzz6U1nJqQ==,iv:j4mIPEZtXlro07OVzFfFmqJOX84nNibvsb520F6AwvE=,tag:B4rvGYCMUUqMrr+Q6IdYFQ==,type:str]
-#ENC[AES256_GCM,data:LLxIxJUY2iqg2xNJ9qN0xDjfe3H0dzXRn03h6FHCqMGrbWQyWO4=,iv:VtVBNQO4EL2nyevuvrEuZUymAVgHa4muuGtZkud2kJg=,tag:Jd8WKTmK3liRLJSXz4QDCw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:yZrbbWsujbBvHucCLRhW9fIS4CQ=,iv:9K0N1OoovehSEacHsLhNXawUgifgx+2S7xcthxd7EoY=,tag:W5J+XOfxTZhlGZJrcrSnLg==,type:str]
-#ENC[AES256_GCM,data:GSw48xZKU1xExNeHDfs=,iv:xikBNtNEUOmRKDLY0ROUOE3b8/k+OC8Zf81fJxcoquM=,tag:BaS4nHhxavmhF8qj9Z1JiA==,type:comment]
-PODNET: ENC[AES256_GCM,data:Gv/oSk0k03YU5sYinw==,iv:I5GIBKYrBvLTEezPig0hxkw0+fR3bSSLlU0jNPGi1+8=,tag:6PEFhe/yRUKdctLz2K8HQQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:wLaTsEfxAPW+ex+XmQ==,iv:3f96yrL5fj4zB6oF2hyqqmrXTd/wDEFfCXHJRoCR598=,tag:f1s1lna4eaoqYAF1/eFDfA==,type:str]
+#ENC[AES256_GCM,data:usDsldwp4MJEy1p75+cewuPRWN4DcHUoJ8AU+wB2bIfBXJ4aNfCKVAxovPibWhRx3d0IFVDFjZ204849OixSrUE=,iv:bbT/CxhcnnDiGroecLhFTvKp7enErd3jXP0MLmUK4PA=,tag:6yLzu/TygjzQkbX2UamX7g==,type:comment]
+#ENC[AES256_GCM,data:y5zuKCHf1LC+4XV2nmlFFw1SIYk7R9w2WD4gmZeaEv+gbL9ZdYc+20t0hGM=,iv:tBZCGEohEOZXm3BPMxJJPSh9oXOTruaH4gZ059IFG4Y=,tag:uCyE+59dvKaJYtDY1ew1cQ==,type:comment]
+VIP: ENC[AES256_GCM,data:8qoTNrUNoC9EBJbxZA==,iv:swcl7cocPcE3/2evlk2lkkwwGbFp0JKasiV4DFJln/o=,tag:FNRjwA2xZRtaNYwA1Xqwzw==,type:str]
+#ENC[AES256_GCM,data:/kjjsLwiAdih+Rry696Y1nFyhJLHQ8taNizv,iv:QylzcqnlzGUk+m6wQIjql7+8C8ecSj1GBkpY1xuUMVo=,tag:LU5BoRB7k8rcySo85qCHHw==,type:comment]
+#ENC[AES256_GCM,data:P8T30cshmHI4eKfzJ6VmRE+0F6xHDVsb6OOTXx/dJbZFkdNdBNcDhSUbz5Nm20nczqEZf4oBtakOLslD8G03KbFYeB6FmEYDaDzWder0Gk2SqYLw0wuXw4E=,iv:JmpJuKLVAPmjTbq0QIDj0HRpPiv3xKcUKyI4ra9ILTQ=,tag:7T9WIAL02907sX2EvfCasw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:UJTm079/aU8rW8/vA0c=,iv:eebFp6ToypzTDTtlPYOIFtdBLHGbTwddqwBCpkMFo+Q=,tag:djuXCORIPznpP0sY+UlSMQ==,type:str]
+#ENC[AES256_GCM,data:y6BDSsEuQOKAV+E9QCFWOUV4OZtwCQmbYOG3iZMU5Ao+0Q==,iv:SVpWHOlkGDUHTnDW9Apk+hsTysD7c2euLaG5nE1Gmuc=,tag:hMN2t1JOHoGBBjyfyjUtlQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:s+6A+UNZJixyONMbdg==,iv:kAmkX3DEDFBi9w3KSk/0y/mENH8rZK1cZn85v8v1/1U=,tag:gxF3JLDWzyXWNsKbv+f59A==,type:str]
+#ENC[AES256_GCM,data:g7QL/4Lgg7gla5Y9kAvUoVOJH1OyiTZYtCaeEzEeo8kYrH8Qx8RoGkE8StDwJ0E=,iv:MYUnnCsl1U78IDG8KG95lWpsKsAvEOPoK8O+KM5CrEQ=,tag:sKQi72+Mph7llvKYd/fIkQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:3KWs6VSSiWPTnMvrRKCRIBtCF/ovaRP/feG0lN0dYg==,iv:6aYoD1OjbsDQ39aTusLsm+qgF1fgkprwYchiiDO0KHQ=,tag:g93VfzsM6KdiBAUeSk4DHA==,type:str]
+#ENC[AES256_GCM,data:WtnXMuCUnONkv8jyR++4onJiM/XMal4cSPuftIfQKjITKXL4pGgs1z65AhPZPQ4g/q7dC7NN74iQTDhozKFqoE+A5PkjMmpVIzp4C+EnYLIpww==,iv:nJljxr2LSOUxQSFVY+jucSktzBejdm7bfVhio+liJdM=,tag:xdoKWedrNcy+WG1L9cMnPA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:YK8MHyfueL3ar7o0/G6w,iv:98P2OINBaX2QXcKnAggEdtPaFU5xpISopWpO9ucKdTY=,tag:soWVspQcLGwSIvkDL7UYaw==,type:str]
+#ENC[AES256_GCM,data:7mlJemXi5VNa9982r9utYFHtzgG6w1p55ZYlQLP2HetA,iv:jrI7/ADP81bbpn84q2KY0w73AEvToEUJghb+dlxVPA0=,tag:iIEyMFXCZnhOcuZ+2UpjLQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:fYQjesn6fuui3X/PoX7F,iv:CKoNgQWp9adDSC6f349e7nXK7cJhanapecjEGtUmnJo=,tag:TN7sTE8YpNvlqgHrfd3tPw==,type:str]
+#ENC[AES256_GCM,data:2fQVUoetzuqBys0j33AeFli7G5TxK+q8tL7ogcm/TlN2kB/0YPOsV1VNl9PDNTHKG9jLhpQpyT6INSGZYpIZszlS4KJGdrXmZfouAgeChz4=,iv:mVZYV4C5M5XxPvVnYBKIBpo9mruMQkrrJSNEV/QKErM=,tag:VoP8Pc8JLazN44czxeqZaw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:Aeb+nYCT93Yza4rGm9Z0,iv:ZI2smTz8fUOqwQPwWfhpnbx0f/EPIJW3EIDBPhiQeFg=,tag:CioiFl1kBgVyhpgBSZDZ6g==,type:str]
+#ENC[AES256_GCM,data:De+CnY/VYagisXZwze1hDuB1+KlMuY8HYk+RFkqoSC7MrmnV59pWbcdgZeI7ecBNNOa/ZX17Hdm+OUaf+ywpCRi24zESsGCOG9LX75K4uSq2AMwbjXKp,iv:xRblsnZGxBUMVb25VExMSe9t83cs/Te4wP/n4pxtTC8=,tag:y7FEE6972iIRPvIv2Ubq6w==,type:comment]
+#ENC[AES256_GCM,data:GYAhKaJ+7TMrAbgStCy0iQHe0GWgGu1p8L43gF3xWXDdKVYMOkMP7OGLKCApJGM7fDn/ytWrbr9qgDr6WTACKapoQCbQo8vFVMOSpN35wHEWph+Nr8dW83FfkA1yfOHA5Fom+xa1K8QSG2EWEr1RqT68LF1VjcwQXXuwoQ==,iv:mUw2smQbn+JT9RpYoLcsYcNvmOQI/vRrEbAZGvq0P6Q=,tag:6h0tmvlm9J8EXnuwMApT5A==,type:comment]
+#ENC[AES256_GCM,data:pbm03RC46XnvA02NK9MjdWhOu5WAWcM4BzaTs0a2AAN5xXtIKDEdKtDpTZVZIDRDAmQfeE8gXykH9soa2HHWAZV3axwSbXdGgnxrqctGD5o=,iv:7SfcT6mUKLhMKb0bWeOsEx3gdIKums/cru11g/sek/w=,tag:F184k9SRZ+oRic5qVzbZOA==,type:comment]
+#ENC[AES256_GCM,data:x1tp2MLj0wF2kSOSveVES/bU9hwmM8NW/Dc+5AbmbnH3tf5SfZffAsxLvBzFpqiYv1x5jjX4,iv:g7GdA0XA0tyHCBZLxjrrccN6AE8F2j2nKS1EZqTvgFs=,tag:YeH4MsdZTV5WWk3e4Ep3YQ==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:LqznRt4UdFv7Uzke,iv:kWBoprNDp/U2OwH4peg5lY1fNB6dewwuPUwbaoULYYQ=,tag:TLLF3EQAtKDw92HvZ/daOA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OAbQszZgZ9WnSawU2NKMpe0=,iv:kjKHLsd8kk/OWuXQUSNzwYCcYourb5+MBdKKelOOy7E=,tag:/Le6Dax9ySyFP4rzh21qdw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:gNH+6ZDSzkjg/LO8GzlAgkH4nDTzgYKWBcHjS6ROiQo=,iv:7/SDHDQLQcL8VUSzN1fgRZwNj0+JaEO/eL9DnEZq8AM=,tag:CBV6o/1jX2JlKnc2eEe1rQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:HP9+HMPsrpTn0m/csaDbPQQw5HWThcxbaPa/QXTxorzyzrmxMJKlmg==,iv:HbgugvbWrkWbyt2LPlrF7Nam/xpkE5zID4jaU9X1NiQ=,tag:TiLNYF16j8h04GgHvTWlGw==,type:str]
+#ENC[AES256_GCM,data:sbP9/g/vckfVUQIJ9fJl+t0W3Tuw2S27XkTA2AegoAOi3WyZhbNUIInN1/OceMN1rLlRlr+yq7Nyd1RW4xKlOA==,iv:LyJrsJB99Dkc3NgU+2f7vOje6r/3i36jnN5kZQtoOyc=,tag:wnSFiCXUw0XWgoPGGWDHUw==,type:comment]
+#ENC[AES256_GCM,data:t3Ootg7oc7NjC72HuANHeNB2Bxe9cb6nTGKaoBJsmHKdh9BWfVP1d+SSjpT/3zkPKvuQ3I6kaEE=,iv:otBArOJ9qPwVnHI78HLWv06B+vP8qJA1W12Ql9ONAQ4=,tag:SRna/AMULgH9NyjJC8+v6w==,type:comment]
+#ENC[AES256_GCM,data:YBlsQljM+sCS1dihYOcP/f9eLiun3v3DEA==,iv:1WI97oEVwRcm0ogrQ5IDn1u0lL34tMp9dvnwnMl9Txc=,tag:hixhSEzQDMLN+m3+2oT7zw==,type:comment]
+#ENC[AES256_GCM,data:CMEs1vWSyRzSOmkvs/kIAbmkzeOysRrnfJTsH+6qyInSfUezbLrkU9IV7RyZtj/DR4OZBPmsRvoGa6rR+BR/HXbfdVoEx1HwMPOPo0A=,iv:DbSuz01yZclmuF66587So3fCP+ffUx6CWsLdHW8VY0M=,tag:tXlwen+MfiZuEyEhqS5F9A==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:G9xrVZfqjw/BLALe0AISBNUAJtU8M0Ke/4W/PoI6PPDWCt1Jc3XZ/VnY6+uDalr9,iv:rQXNWb6TV5LIR3u46vKqY7kAM4w5PlqDfookk81wRW8=,tag:uic0hO0y5smOi/oE0ge/YQ==,type:str]
+#ENC[AES256_GCM,data:xIq/ZuCgJGy0NSu4HHNXWpvspzsKFdA88VeDMcMV2u77xaxhu2FY7vMeNC9AJ/O120VgPCer2na3SudSV7fZCfnm94dnfNE=,iv:+jVUehZn7JXUJCpeNS/5YP3soJOLOfXmeVy6RYIGMKc=,tag:o1xXZOX6taNuUiEKyGL02Q==,type:comment]
+#ENC[AES256_GCM,data:ddEijYbBSSNgpOpgouu1Pb20wFn9DE0Zc/SG5xtd8z/GnLzbV3k6JccYAhPump1+15yi8P9w,iv:9km8xTFvfBSbk3XCoBaLlgzDT2BHp+elqQkFp4N1M2E=,tag:iYTLlZQ+JsCzey7dQcE+vg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:xt2Xvr80gw==,iv:S53UQTvh1XMr56WE6MDMC6kqLEUPuAbwvVsQeS2ZMMI=,tag:tElOwLc6fZsAvxNiwSYwZg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:syRkTv9uCTLTw5NRuQ1q0fqnFDM=,iv:+kPjR43ud/5cNoA9fDYnRTo7dp2jQZkKYLLsO961ekk=,tag:YnqppES4wABTldGbwUn4og==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:W9vRhASVWmuvVZo=,iv:RvntQa/6Z+6Xap7jUwqa9sVOie8t+WgZDQgs5GyGoPw=,tag:4KyCRZ2b0yngY0ykGfbCEQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:2Esue7IB8d2vKE1+2Jgr,iv:/2xWSOzOp5sGj9WL9umTEgx7vWfXKrDqectEkIUhNHo=,tag:94UD859Y/CxE9UTgE/o5aA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:+ZdPQiiAToJ4z9/JgzKZjdyoALTShTIRRA==,iv:9KF/jmkVc3ls9zfUF8OHcVGucfxO+0GQS4FdvhwUf3w=,tag:v7Pn0LFwER9EbOSb0cwS2g==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:8bINZ2yd7BhXZjHpkK2X2GrOSOvKzp3VV8BgkJNf1Q==,iv:MTqOSfx3WtwLGtobF16kP7N9KGtyPAaTDKe1+kvACVU=,tag:Yy1Ro8F8ck5JIrmhKUlSRA==,type:str]
+#ENC[AES256_GCM,data:XongrzZBI23rMr/bGBEXHEclUDgf04sYp4zM6Wsoptod2dF5fF8=,iv:huV7a7ifA0toyTwGNvyHvInzbbubhORkQUmP4AGeJAI=,tag:sH7WkHbGn+vQ84aMjo5LFQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:aWq/cosIMQ5hJODeJ9u4Sg8MMWs=,iv:4HOGu4Gm1s6AveauyI7xeL5bAaTIuJ5BoJr2zr5Bjmo=,tag:1wIhfR45HA2rzZ7e7PwmFw==,type:str]
+#ENC[AES256_GCM,data:Rpz7JCZKaFmtkCz39+k=,iv:xiGdEDw3bcr0f61hfN/+PRWP7u9fETS7R5YH75nEp9w=,tag:dJGCY4L0JvSAvPr3KkwUDQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:G20+dQefBanBqmYzCQ==,iv:e9sIbqtEqACUgeXzlcWjPH7mwF37A0i1pDo34/+fUOs=,tag:E1moAmOBBgVNlx4yVj55xw==,type:str]
+SVCNET: ENC[AES256_GCM,data:C3XWBEoyNTIFb+zNlQ==,iv:BB+xK1UJHi/1wkN9efXIUh3fZj08Be83JUgx2gF1ueU=,tag:O3/by08OiMnM8vLKop9QXQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhSHNIaFA4MjU5SWNwZTJO
-            WW03bXIwWTNicmRrN2FHSkpIUDd2VFRlTEdRCldLSG9ydlAwNk5VWlZlaWxFTmhi
-            cmpWOVhsY1ZKY0xWOHVvazRPOXpWOFEKLS0tIFQrZFBjNkRVRnNxSklRZEdFU04r
-            LzA2NEZVV0tUQ09wSjcvUW96N2wrWWsKnX95glHFKqeEvFqM5BsR80v2ddVXDe+y
-            gevbE9kDdmGjOMfxnHyHjpjh9GMQSKNpHU/Gl8akUzQIY+Vzk6Z76g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhUlRRM1U5Qi9BdVdBTVg0
+            d0pNY25YNE9HeGtNMHppMXJsbXNBcXBySXcwCldhRTJvOU1DQTZmcUg3R0RkcHYw
+            RnZVQU1YS2NZSzBJMUxaUE4zZ1BrbVUKLS0tIHNlK05oczZ2RVVCd252dUkzeit4
+            NzF4dkxHUjZBUHZsVHk4azc2cGpaREkKwOeMs5z50NibSZ824LDkCbXdQ1PE88s9
+            WNpUPNA2jqPRnhn3Mxig+eTbWdTrtk6UD7obxdP3r3ibfbKM4lFFTA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-29T21:50:25Z"
-    mac: ENC[AES256_GCM,data:VjDnzR8ccX5F2N7B6JQoF3cmVgeIkMVM5Ul0KfBrhc4TBMQaxK1tNb+URNZFMKi1+TdrvyiHZMfsnFFKAAIQEomiYKCL4GWgg1Q+9u/z0rsa01Nq9KLG0mRMjP9SUNlc8WePhxvNS6/cYPuFV/3IttQP35VfYGQwJUra3rvnZ4Y=,iv:WvgOvTUAGCkUpZmWhkmaWQquIPrqOhTpw/kzH68gYvg=,tag:b3AinXj4DGGx6W31dO+IPg==,type:str]
+    lastmodified: "2025-03-29T21:53:36Z"
+    mac: ENC[AES256_GCM,data:UTVsu2dTSndRI5k6bLseFyRuXSOqCN6PDCUThLGDgR2QjUsFoOoEqGWPZilTNuN8ehWHCLQd1ox9MBxr/xFtV1DTW23Gs94mzq+/XeMW6n2+Tkna7TZvvOOM+kU86yjDsT4sESoCwsdOVQKCEWXDlDjwhoH6GokQpRBJ7wZMwmo=,iv:fxkKU3SLwve1bzT03D2Gee4VUyxqm2CP47p15/qVzcY=,tag:+JFXqVnppq+cp6ZoX19cxw==,type:str]
     pgp: []
     version: 3.9.4
