--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:uv5Tl9/8pTtqi0osfVUJmTBgrqaxonuVRf4CtiwdD29l6k4Pi1Y1NBaRcWfafhbUmIW53PKv0/+DVqPq7kiVgfQ=,iv:JLG3dp+l6+NoRILeqTRtjeK9bGC/y3IGJpxBc1lnZLE=,tag:Z8/SJlw778M4WYgtHU0bWg==,type:comment]
-    #ENC[AES256_GCM,data:vsp+uj/M7m3PE2AwrKaQLYRakpWkVGeFvj3CYGknPSdg5VM5XOU1AdHXXbU=,iv:7QJdyBdRuO47CgdpQ5OUp+sKSqD3AuIcHaLO5gUzbNo=,tag:uKNDfMpM+027n6gZd72z/w==,type:comment]
-    VIP: ENC[AES256_GCM,data:7veBccAj88KtxygnMg==,iv:YR0fGZBQCDwccmNC6RqZI3DRd+xdBLbYoRv+/+EtLAM=,tag:7DMdZh+HMZQF7w5jr2zS3g==,type:str]
-    #ENC[AES256_GCM,data:v6UYlDmGeK1PCsBYFV33LXD5dbqmpN1aEq3T,iv:97KzK7ik8S6xIs2SNqTfqP2eNUU+rNjhA1cA7KGSnYg=,tag:LM5WpcgcobpL8Wrdykkq+w==,type:comment]
-    #ENC[AES256_GCM,data:VXmqBn9NiFCHt8sZkVmzw/w5ZjDxOWrGGD6ugjFNhBsG8J6bhizq/Ao3nRjDb6J6TfSr4KNbVm6EL5e1ON9sMXbOXKSQ3NQZHFCMP9Fw6lGd5om8jgnjz/U=,iv:xrb4O5URjHWupckP3kWjxJNNwhvkuAUXTog2Poglfvc=,tag:+dr8bOzdeo4od2F7v/v0gQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:jVglcCRji/8lg3TqM8g=,iv:YtjHTrKF9dUv7QVg6uUULfJylqcZ54oiMMM9Md/jlEw=,tag:ucyHjubGRBgUUs9TE+05aA==,type:str]
-    #ENC[AES256_GCM,data:EdA+gdyktQhoMhmyfeK38aXV/nokhiV1fFhbz+mVq9+ZbQ==,iv:5qQtkbAxSZvs5m5/QraNwGsEaIdYEgpkeYrRmALZiyg=,tag:Zm+0VWosIwAh4khx7/aq+w==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:k7JW5a8Y8VNGDlx7qw==,iv:hHPbWYaImgUbc0cfpoQu71aEpJDUxjFTYuaXdKV90yg=,tag:BgjN2WOwFRNFvehQPJ5ySg==,type:str]
-    #ENC[AES256_GCM,data:bqO2YvtSkb0I3PwRLydM023QiFzCV+Alp8jgQqm9qLT6ElyIM97xvMbrO8c71D0=,iv:uo/zQD5kzQVm72nU0WGef24Fqt4bA+ywBDA5CgNqcOQ=,tag:ZalYmX+nRO5KRcgWezuB1A==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:7pXHw1uDfQOd/IftxrSykTLzCs+5nL8tlSjuxj5smg==,iv:LZemg+FTQU9ljC9kf27hm4jpuczY2z9bhOujPYlPy7Y=,tag:6IvLhcCgDk4HSGAXQjjxYw==,type:str]
-    #ENC[AES256_GCM,data:QTfgektwQzneUsLpHWwZiAJIZ4AQOFQyZvVXMLipnBESw2LU91enRM7RgTbzOVAewQ7kyLxncZaB42W8BKH1Ltz4r8FUWrk019HVJUsL6owU3A==,iv:stDVVpY9gLhUA+VfWqT9/oj8VEm6xVpPeqoxsKfwYTk=,tag:c6w/YroXMOpV2sRFuiYtfw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:LQNqQKRM+PTcqHqon0Mq,iv:zSv5lEs/HrTvphy7oyvQ7B+X46oPxzLIDidHlLV1zFI=,tag:N/zVHoqRGpMJ8mjeyVuibw==,type:str]
-    #ENC[AES256_GCM,data:/u+mi2O+Opdk/jHGzpt6L5roFU6F3FpqbP9HeoSjJpHa,iv:rO3uVV99d3Fny1dgninX3yDbRtDhrU3FRja93LVt+F4=,tag:Zm6YV2bEMoj0p+II0z8NQA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:beOeVNUUSUwcF2cQnYur,iv:O70hUu/ClfZ6rzJ/49jK5gurR/M3VzHrIsvPd8NyUtQ=,tag:m8zPwSYgsUcbawRikpzoAw==,type:str]
-    #ENC[AES256_GCM,data:HHQzLSxsNcI+Q+o895d1xiXDblMfZ3JHZWzp0kgKJ8YeZiojEUp2hgBs9OMiTCFiG9RQvSTfy8BFWzo2dwjK4SnzRn41OEIrm49xTGUeVkw=,iv:DCLQKwm3N7Rnv6K5feNSymxTr1tQj5+MC6kT5lnHN0Q=,tag:heYD7V49ro4/F4F5bagCog==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:5ZCYUYj3XEWHqiQoAeL7,iv:Q0P2/hxNRNq7UZ8tPTJw5vCki13dP81UqP/GzdK1ZPk=,tag:+uYsLmk3YileJKn2jus5BA==,type:str]
-    #ENC[AES256_GCM,data:cuJYg9m9gEWq2llo/Kd+hO6xX+qZaZtGjAaQ7ARe+jW7ybc0h6bL92/8Gh7vP108Z+Dr6FA4iy0qi8r/Fmq+LOVaTJ9J5x/MDgt2BhNT8Zro0MplvjJa,iv:NNjPOCYMD4t3x/DiLwJbeJTOB7my4cRsmDrW4PQh1pM=,tag:ZJo6c3SX7NAhOlMki3NAkQ==,type:comment]
-    #ENC[AES256_GCM,data:KWxsphq6BF7Ck1FxdNGRqYLJeKYDeV4d8DrPeI1OX5ti0ijyQy/getRiC7e/oFJVPoB41HR9iraVr98kW9wcjJj+dZCFI1xbcd3EOvCQlUAIFlBiuO0MkVOO7+IbMo/DBAej6FjwUqbkNdxihv6zwcGVz0wkgicPaN8GZQ==,iv:isuM8Po0CbAc9SxejYGXdkHqIJWSaebgn6N49cvD1EA=,tag:Amo/16X8ZqS0L2itmUnxAA==,type:comment]
-    #ENC[AES256_GCM,data:R6shCAzS8mkvugX26xluI9/Dj83hHfmr1GwSmJrTYlxxYy+aGJthe9b6t35cp16/g7eVITjEG6m/xBiC32m1UEAtOQNdLazjxhAeL9GejnA=,iv:2wtR4GqaySJ8lJ5fdm9E6Se3vcdoJEioPgu0oA4Up68=,tag:0tFcx6GEr+WnO+Mx+TVX0Q==,type:comment]
-    #ENC[AES256_GCM,data:Z+affHduGiY7lfv6h1z60dotBRm7YGb7ycnkuSm2nk1Anv0u/ohzbuUEbn9Q3/b5P7xPXMGt,iv:1cMuO+STdp2pG35FPpOfDjT1ZOL7z3toYQ0tAkHv4kY=,tag:t560OD3kCt0kxt1layDUYQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:TtLwp0Pfqg+i9v06,iv:QKTHvPXxff7K73C/8GSKbnUDHHQpNWhMtdipx2/ntB4=,tag:wLT+r3fIoIC8dx1jNzk1fA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:aIpjoIX4rLeNneiGJQtEzwU=,iv:3uwqnlmleKFD4bZh5gxqvlDMsKptxkB1FWL/8I3mYis=,tag:AzceQojgDfG7RCYDdHzn3w==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:1DyKgDFX6BeGGKHgSIEd2UezW5tMpmWk6SxVbEXpKCw=,iv:/n+NRLfP+IJLt/moJLzoZTHBDtV3xP22JbjudhfgcQ0=,tag:wnQLQcZ4ma7dDw6ZOr8l7Q==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:XTg8bNEX9esG+d47+6ThY8lfQQ7pfvqAfC0sTUt9Zm9tudzR0UFeaQ==,iv:FedUE2TbhQSBjSBscWpvJ7N6HKelDfAu5bmxhvZQ1tk=,tag:Bf95F6zv+YbwCisIz3HO0Q==,type:str]
-    #ENC[AES256_GCM,data:O7Nq0I89Sb2hrBK0oxFyU4TRoWdmSIRqqLxi6XdhddFvhu1RVbM0WJmiToXYiEKK0kAbX6xI3RagIy0FtC69+g==,iv:x3XFUd0zcrs8SiipRHt5Miw3ZwTI3WaPMAOfCinpH/M=,tag:ELkAYwbjKwsdihYynNGzeA==,type:comment]
-    #ENC[AES256_GCM,data:3MVFvPOf2oTkHYnXlaU8LHAf8h0/jQWNK4ajbHGjT6nYyH6Vm6+yGqS98IMNL554ItPu6ByJRuw=,iv:gd8uqD8biu6pS9Y8NUmhdI0cdP6QxqH5yKd0NKlQaso=,tag:/pILRaYxqSlBE3iBbu8t+Q==,type:comment]
-    #ENC[AES256_GCM,data:SXCSqKLutuc8FC8iavd9aEeIoG4EINd4FQ==,iv:iMgAOMeGp2t0pi95/thn/CCFdAXCuJ/9Rv7JbPAQEQg=,tag:VPuvdm68lwD2Li2rK8C+hA==,type:comment]
-    #ENC[AES256_GCM,data:65LVdBh5l6Lz7IFWP+ol1dbY7U64WNovV94uS5PsaG0M4RnleXoTvYB8DZA5zTm9OlTnIbibkrJ2cnOq9hBzS4+F7bVLwkI1NAzAz2U=,iv:x6E/5UZZLK4W34c6MFWUH5Bh/bpaYFwhm/wrbQTjyJ0=,tag:wuCOO7VvaYVAC2KLNb2l2g==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:sBGUj8kuaJf18w2xnxnSedvzV52urmPDXGBwKJxbACcK7KPqA1mpeKOXdOIbH2pP,iv:3oK6nq8KzpgAZsx5bpWxo7AeKEou9EwjF1iv0bykHzA=,tag:bXR/FU/r3XWxGG9s72g2fw==,type:str]
-    #ENC[AES256_GCM,data:pKXjrdsgUn091Byw+02EUVsH1EHwO83F9k6MkX2UyJ5WkgJSyD3TqPvvZBY6RQeMzpgc7KB/HJ71dXWNLTbMLRGPCSgK/18=,iv:xZFtlKTt87cwEAMFqgLcfBWRunVeBdqHKHiaLyKB1Qs=,tag:HFlqaS7tKtTQkpJtJcIZbQ==,type:comment]
-    #ENC[AES256_GCM,data:r+9ro8bVnw/f5nsD5rudEHxyKalBTO+iVNl0iimKBNyHuLV+k0eG2n7+ikMJupl/WubG6p5B,iv:i5wfV6873JMEgeu3KMkMYMrFtANjF7pXiEfTyjUztK8=,tag:kzTNxejWe2luKIBirTalUg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:rd+FEsH4cA==,iv:3roXrsAKVjf3b7TpRsOTARfxMWoKo15U6UfEBBUDq8w=,tag:/tlasC1xUFAcpPYV1Hng9Q==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0/PEjvQ4ZcEGsKhveuxrceJD6sw=,iv:irBnsmocFWWdU3hnf/VMz6ejJmGBiO+4X8O+J9G9rm0=,tag:0aWLg65/hmyTHwOhWdfwAQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:ZOtVprS4Zr7+jRU=,iv:gQTVz/JX6s0vfPBYesOkVCBniPZvLxJLYIlRr09e/Js=,tag:J1Q3jJtRPE8Iyx3xfC9XJQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:y54CPsLXxMA0GnTL37Ph,iv:GNbea6UfIgPvzaK9dVeQK/7bLj/olzr302mNj9QwaYs=,tag:f/WiDenVHPP3K96Znref9Q==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:SEIplOR4MXhGA0KIiyyITVEu/KoivD/F8Q==,iv:cBrTumvAzpWq2+FL0PefSd4OETOCcUS/1jsHJrStdqA=,tag:5mlUiRwOFgsHnCbLjDArww==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:+uMZTNUJjb0FF+0dxrqiuJbbEQRfSvX5lsNp2+Uq8Q==,iv:S3XHCJSF4PFhD8vGcXTHN8VP4DqELT7/vn195sJJrfo=,tag:yVWSclbkGK4x2DILHEj4hQ==,type:str]
-    #ENC[AES256_GCM,data:lyBXH/Ynx0yUlOU85BPwMP1s40BUljoX0ik5+qsJBCC9aKbm/e8=,iv:k5dQX3cg5eb2+i8f1zE9IbrjzRoscr1YunGzd/+AQpY=,tag:+DJf2ZQ+HT6MJDHNN54VEA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:8K0Oo/iDks11Sf5p6Xeif+T3S9w=,iv:JIKU5twzerOoYHbznv7iPZ3eeR3z+0n08+76PPMovZM=,tag:fq2sK+0/eiw83Q5jsidZTA==,type:str]
-    #ENC[AES256_GCM,data:2H/mYytyx/o7hbINzO4=,iv:3dKqZRFP1jAtNJ50HfYOWYw3LrU+zlzhny+TTcTrmjM=,tag:BX+ilLuR/JumTYCPMPqWpQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:h1zgmlStX/LOBRxaiQ==,iv:tuhpycc8yC1WP/sKgm9UL623eFfFaADm8f9nkQENnvg=,tag:W5oA/7YvoMHUuadyqsSIFQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:+HhGQoFjneKEjntUng==,iv:U5GyjR6qhMUjf6QWC9K+Tnk9gtcRX58n0uBNet9m+x0=,tag:6ndoJkO8BGkMDQ6S8d4cyw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:ld8EQg==,iv:fI88RMtsN7DRcNYFrCzIunKzIDx8Xg7+9rzQ8Sc9t8E=,tag:vLfJMi8H++ZG+w/VvLcP9Q==,type:str]
+    #ENC[AES256_GCM,data:9XoX7wYZwXQvASMS6ayl39j/8Hjul38YpNfwqDeQzRJIDWFp0tYv2zEoNneu1Yjw968X2Ahz5ngrLMysiOGT89c=,iv:9d+4RE2zJrIIt7vkxKdTFNIKiEG8j5mp1Mo2pXM0WUI=,tag:W2JJKIVpZaP3Je1+/JSSdg==,type:comment]
+    #ENC[AES256_GCM,data:Fdl4XPfFKRVAYHxqf15CT+2HQlXwyLmtsxJXvpdFC4rE/kuHa34qCxCcLpA=,iv:wJjbBaQi6rqvzGUcvG5C7r4pytWa9HxcXm9we/fw7nw=,tag:0ItQqmqs7msOk13toAft3Q==,type:comment]
+    VIP: ENC[AES256_GCM,data:URnfajFopxxTpEnPRg==,iv:eMqoFOQK3Ip0bOYpNPVnuAlMubh1z1Dfj4KKxwa9P7Q=,tag:ZKypiOSwbSGAkLo93fl5wQ==,type:str]
+    #ENC[AES256_GCM,data:PyDJ1UxdIGdNgv2QLA1aSn0aPdS43VAH3RIt,iv:fc+9mRJLJJ4wAA0kParGjrgdGHkx73dPXro+OcV1Woc=,tag:Sze+5wmWvNK2lYxCPQlN9A==,type:comment]
+    #ENC[AES256_GCM,data:Z8AfNUJ/KYnCbrEOx7+3MUpIpcLqvUhOKd7HHI94OaFXoiBPP6INd9uuUM/Q7hETZwsaghjhzw/etQxEF081eIRePpUfGV6bHwKB4wA4pQ/DmebkWcBQmlo=,iv:1jQW//8aBeRd/NR+q38E66GF8ztNXGyqs6pUDyTMi6w=,tag:J6GEfzhhIau8ywfrFg20EQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:YfIXGz3Rugglyl3zdi8=,iv:pRpfqFVytRHZ6ehHe5+osD/hukz1CvClLi37CpAoqYc=,tag:jRukM38MpiOikXRmDJFGXQ==,type:str]
+    #ENC[AES256_GCM,data:SsHpRSI7e5JprazKqDjB7wZ/71lgvKIu3uobTUbECdlJcQ==,iv:Pyz6eBKIcBHhbSs8ZuG5NpKrDeFbrbXXuWLAyLJ/n5M=,tag:0ANu0nDBza/rIY/TuUbnCQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:DmtYEkHr2BzOj1KlWg==,iv:PrVW58f2XdMJinPBmvmkAAeJ4hcm5W9qAscxdouVuag=,tag:XwC4czmgQTV5L/UWbFNR0g==,type:str]
+    #ENC[AES256_GCM,data:30eKzBNYlDqD/Qzu2amIc3hz4XN70Y+vwVBbrrrTIqh02KvzY7ANOZFZsWFgMFA=,iv:2M3AW57NCdTYysvQLDF/3C3stV4a3k5hp61tS2QkArY=,tag:yY7569SH+5cmbTenZnjQJA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:p17OynO6TDOyGKO1mduoH+8RrOVKc0VDh1g24atOdw==,iv:HUW9aaSK/p/SFUFk2dq0jhfSnO/MuqfeTTH0kMa0M68=,tag:h7dYqjFHXoKgBBSC/K99iA==,type:str]
+    #ENC[AES256_GCM,data:950qCae0Ml9C7LEa2rVq4m+Tljw9x6NMQIaOF5c1MSM8ubx6zjmbICgbp7LMVHXhZO2wfazU9B5Oxr5JinjpkdmMrc0W6ZcadtayUPpj3q0FHQ==,iv:XzqwbXoWR44jzEXHaVpHcwXDBbNf3H9OhcnQ2CpAu70=,tag:03D1KdayxdJGc+gJyP5oKg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:IiqMojOu8PHrJaQGP06e,iv:2wsVvN0Bhp3YfNsr/w7Mt9HoYlKDKX6MI4ehZXlvG24=,tag:XSVXIPova6yae6zv1LnYrw==,type:str]
+    #ENC[AES256_GCM,data:MSNlfF8OWd1r1LhHoONydgWVyFZVZVUaBd8W5/6/u0uJ,iv:L2NrD5EgrYCVcQYtA3gpXGfQ1WEsoKrIhQjDvFpRRGU=,tag:wD5+Zq3wf/pzT2YqDgJBDw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:Hly7F7DsVTHfNjpTYNOj,iv:hjz1japhNP3KQh/SCW5sfFSc4erIAfcKqe/PRhH6Cts=,tag:t1lV2iryZ+ViPThOqdAtHw==,type:str]
+    #ENC[AES256_GCM,data:9d0orgNKBWndf72eg71Wy4bXj64IsnAs8kzirzetZpBkuhykFvwICBKgOT0tHGsuBiigLEM6GlwFM48AB4O2l2HhJ5xuosHsSAMFkI3XFxE=,iv:YyHHyeHt87GSm2TEsUR16yJPyGD5Z3GqwRDs59c2qvk=,tag:j2asPdBYGesCwvs2YP4QMg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:dgjOHTw9iNlOaqVRxYOQ,iv:/eukevBOy+mi8uNNf7C2/iniAuAVNoGfYKJlXzsInt0=,tag:GD0joSE8lHG/g01Bdh5jtQ==,type:str]
+    #ENC[AES256_GCM,data:GonXejkHnniJcHWVDV8/6J5HU2j0c30jAR+jXn3xEq5z/os5WUNB0iLCff9Sx8NPJ6AuY93Zbn+LnLtrVIkL7pSFVz2iG2nv6qOlDF9ZgaSKQhJs3Oao,iv:6IDdQy2em830uxxHCD9Pi9m12I1I+BkKKEfORbTgiSc=,tag:MPKW2P57zjLc/OWaYY1Pbw==,type:comment]
+    #ENC[AES256_GCM,data:bTssPi49n7Q2NfEBJ35vgOSAhKqAM7+fOohdepKST9pzATT3MtGnqxOepSnuBC1/aAjzUj/Chit8zsbs8hawOQz3SZg9MUtHLjFblICbIKYONkrnpUCqBhcPtccQfotqVzIfF7NmcTU5GSWoN87S4VPlhaU8Ky9CYjnk7A==,iv:RCS0S1/EdqbZpRoIsoWwDZKgL9rEYfsarcbjYGoBcU0=,tag:BnebJceSwqm79DXDiXDshg==,type:comment]
+    #ENC[AES256_GCM,data:CJyI4H1oc9pN790xoBCoakcI8u6lPzu4ScgUAzdk/a1r3gVLyHkORXQZtoQCaJz72BN8w1lj+ScZ4auMkc83mNSLVc6z8b7rASltYQuiUx4=,iv:4ZQR/u0giP0u+xhTH4OwUflvmHrZ5ZSX+VFrIDpCif0=,tag:H1fhSDPEToxEVmJC8vOPLQ==,type:comment]
+    #ENC[AES256_GCM,data:0lnevE2AP/Lue302bt+EZiX3ON3Uz4LyQHGqjOT2Un8Uj0WXnUzFhKcnZb4FZEcQkfrnC3T3,iv:IB9z+4VJCkmqBOybkxZhIR4jMxzkxyGwk3cZ4cDYcs4=,tag:ouCCOHSFEn2myKrIr/1Nlw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:CaSLy49Iu/RDcFgI,iv:oqEDnVK2/js9TxSjL6rC/sFp/VfP7TrwyOib1Of3O9I=,tag:kz37sdgyAkkPDPf6pEygfg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Kr/Ob1Pu8Kweelj14L+9hOE=,iv:V+7KAbAtKnaP+Mm4uwqK1LF+2Ysrdoe4AQ6B0tmYpog=,tag:Fg+CvoXi/4mCBKl4AzPlbQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:Ulnyh2YWRMJQ4BRD/NRgkXN81BQt+VAHttqrT6tQWVg=,iv:YSwpGxrrJ5H96TAz4pM8Nrh2C/Lij4tcvBacuQeGzmE=,tag:X7xyfr8ObW07yQFhVsrElw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:/5cZaGQk1N1PIHn51EQzzVDVekeo0a9Sgk+rqxs40EnG1YjcDV9uag==,iv:gVfk4L37Mz4JE5vgrctjl2taSqcZZ/2bMHMO0jf5Hn8=,tag:qA9Bs9eACtnH5HaLU3TLZg==,type:str]
+    #ENC[AES256_GCM,data:h6b3GyCTBxNh1GYejMrLR0JO56su3lJV+zNPdkthD28VjaBDu7kStc8McAmRi6Z97FlyH3y/TT4ngfTMlcw48g==,iv:fVBTJcdxBPAX8Y0mY4LoLo/1YeKVEBgeracoMUiRY30=,tag:zum82daetN+1VErJbDBB+g==,type:comment]
+    #ENC[AES256_GCM,data:u4hKzKP9PlSwy1ioF2f2PvDnd7fmuHpjjOsD5e0vLNOli9iQYNSRFXePO0GXIKiZd+T/Ktt7jSw=,iv:ulnNN07HWrHf+x2DuJaoR2c4MePY2QkHsOqI8p0+Yss=,tag:PM8V9jmWccjfzfdPqOHD0g==,type:comment]
+    #ENC[AES256_GCM,data:9b86u1nD8FAlIWyP+YA8wsypt9nCQ1M8LA==,iv:S5c5Vno070OEJyiw91HivRngbBKRM8rnE9HADKMsgs8=,tag:4/SpqsisFhIrbsw3jfu5pQ==,type:comment]
+    #ENC[AES256_GCM,data:+RPnAtCo2a4PsoluEUXPAAio2TDSldStYMAVoVkmgzdZknZ9JQnWS9N91QKaBpUe7e80MiTr+IuaLCaK0+xhljs2f4xyh4li/StKtS4=,iv:O2DQMEI1q7dmhhNTz6CBOnUXRQztLQtmU1IT/5wpAnE=,tag:oGcX6OKWLXmOF7RplAHPNg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:mRByIGYMxV844FPZR5QZPDQ3i3tMm5ZGe0aB7ADB4/buol5l+5MpCmorLSBoTKQa,iv:Oa4QRgDE+vxK0sqQKs0G1C9yUCIJlD6nWK3j8ILJ+zo=,tag:HrJchw8E9assyYunwXs6qA==,type:str]
+    #ENC[AES256_GCM,data:v9ldElqaosq07ti3BOtZxZ3AEDuSoRTt2T+0CQd7vrsYW1zgevHVAQcE5iZJCXXOx7T1nmqdy5wkj1slMpTUbxR8TPhq2Rk=,iv:gZJ180UY0MS0MdFWRPubHntMNgWY/eARADBLFtvCfCA=,tag:xtOILB/oegaCVN888303aQ==,type:comment]
+    #ENC[AES256_GCM,data:jZq2PHPApOUHPpes5jwqUHplwGqX4V5jI6Y1f21OUyP6UP8bONJ2DzYJhgVXKLFZe5x2dP1K,iv:836+Om9r1H5Z3J3wrx/s7n6EBOhMElSGJ4YiQkM+iNE=,tag:CwGbxZ4GC2mbDpvxTccRzQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:SoBZ2+yhtA==,iv:86IoAg4e4/DY7vGuLJkTI+ftso9q48nO9/RqQFEWCIQ=,tag:i47feDvoCWbEjJ1yYIioaA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:KrAPV5O0uOJygG+MkTc/Ax9UcUI=,iv:4oL7ZX5IphE98fZKHIItSXlLEzCAH/gOuTrQhlVWjbQ=,tag:n2oVmDMUzJ4y5OTUXN7VAA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:q3xyXXtxfnsT7lg=,iv:ExRP7qbDHUzXAQ/uFrT5t3dEnk+zFLbbPs3Z4QV6azY=,tag:TboM4iUGixxl+03ViCrjDQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:e+Uis9DMWgfWKiPLYTXh,iv:zC7bJNhRUjyvOd4/k2y7m3/vL1wRfzVlCXN3ixDvhSs=,tag:vIQxAA330taOWmkJcAj6Gg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:+wJ3XleIOyBlTnIhZzmelKIar9NNuwylRQ==,iv:hjzl2a61yTOzLRXNIxBRdbuMl9cQzJWA3ATMgBiEDUI=,tag:mu7suP5r6afiZpekmunh+w==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Ib0qCBR+LWlVYqF471Yhd+zR6yMF62wsl+3IfrH6CA==,iv:b0peyVkGE4l+LoI5XbZMK+1oKxLYSwa/tP1Rzwc5rz4=,tag:6WiwubnbXn92x9t1qRrUaw==,type:str]
+    #ENC[AES256_GCM,data:lm385dqCzl1FaoJbfZAA00fSZCu/SocDCW7D30opT8iX1bst6eA=,iv:q3cRshB576agweqHFrCSBZZQJy38BO22PU5MMi4vb+U=,tag:2RuHey9VeZDPw6zRLzqnyg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:wDbUcJpNdlcgF0VwHDoIUt50SFk=,iv:VQ6rZdPNPEz4+1NoKsfIg7+NpMDVueTiFf96YBlq/GY=,tag:O2dQxieKXpKiflopbDQ+vQ==,type:str]
+    #ENC[AES256_GCM,data:98/xuBSE1uTHEOzV2Cs=,iv:AFZTyL4AwiGkCPOKLKbkQggsTaZNYPZPpQfcDctbsQ8=,tag:t/q+5SmrYtQ21ba+7yyH8Q==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Q6mmOJv65v+vqMCU3g==,iv:qrNU6WhlW8KUrY/xrUIW7NV6+K+mqIAG4i66k/pTJaE=,tag:yPzVfA9bgnExnfy6JMJ/ag==,type:str]
+    SVCNET: ENC[AES256_GCM,data:JGGtposDPp5rVlYfGw==,iv:GmUCckR3b/bo6xRfSDTtImmY/0UOb9OPNjQNjol2jKY=,tag:YbpoZ3JMdqJkpovbRaRSyg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:YwmJ7g==,iv:POreoGyjt/qN6i4UuQsuVOluBGOZUcyBsrIPkhFOnZA=,tag:Hh39w6kv5VXPvCJe8ljxIw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Yk8weFkwbzhWaFVuVXo1
-            bVUwbFpGSURLSnlCeTVYTWpvTU16dTBySFVBCk4xa1ZObEdZY1FrYjFua25wSnpM
-            VHhTZGdVR1dQREw0VktlcTNpUXVoV3MKLS0tIEN3RFRVbFZ3c0xwVVpJMGdFbzZl
-            WGpPeDFuWDFyRTBvNWZEN2tLOEVoTzgKjAh00Is4FtwRYo20v8UUHRDTGu2bkwne
-            0HGdq/rjxd1CLyXiCpYJouckAnq7p48gHHH+kS03aH8tds4aTw3ZcA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1TXZSWTl4SHc1SUR1cy9H
+            NzUya1l0Tm91Tk9GTHdKV2ZPL2ZmdmE3T2hzCmliK29CQURnRkU3YTBhbkdVWWZy
+            cWlvL1F4UzdoZGJUa2VYaWtpb3lFZU0KLS0tIG1aVnJISEwyMzlCMFFhUld2NEZy
+            VUJsdnM3QkgvcEg2Z0x1NXk5bFhmdVEKSU4LdukahyaxVQFoHejUuUiSSwuYlYo1
+            KWG3jWyyKeadV3GOApvaKg7OOoe6mfjPyXFPBFSi9/fMBKf09A5mVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-29T21:50:25Z"
-    mac: ENC[AES256_GCM,data:25nH5qGVcsEQqXogFTgcUQ91F+I8IScu5UxxrZzqyeW0xvI6ddf0I8hFA8CkWwqg0XN9UItiWAoXWxZP0X52UCGZZUKk9mnfamXAH17h1y64rR5PfaiLfXiU7dkSDiTa+lfCYIUW2vZgIdd7peqMar/ceV0k2WHkgu+Q2pmcGa4=,iv:FOcF8dXOq+IMDVMepC70FQ2lktAkYS2Qc/mbsc0MjO4=,tag:yJniJ+D1PgbNOO04UrT87w==,type:str]
+    lastmodified: "2025-03-29T21:53:36Z"
+    mac: ENC[AES256_GCM,data:u4wr2LRDHgIUX7Lsv8ctirIPSSawM8QNzvh7C/gH+F/bo1NVaxVawbbzNaxfMzjH6VQUUlLmZbSlrlbY4pxTtLE8OsokCEjaiE5MgzQx7XnyFZpIvXhoCcq7FDh5WN6vEUrL+bbOgWc1TaTxY0CUSr2kgxVIDX3gSEiRTpkTBbs=,iv:HX+mBUu0vJUnKzHcFadVXS3bGDZHJVNvEVngkk2KSc4=,tag:1yjCjTIZaV6uncBrAwUHLg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.4
